# UAV_Reachability_Analysis

./: .dockerignore  .gitignore  CMPT419_Final_Paper.tex  Dockerfile.claude  Dockerfile.sim  Prof_Guidance.md  Prompt.md  REACHABILITY_ANALYSIS_REPORT.md  README.md  _check_vf.py  claudocker.sh  docker-compose.sim.yml  entrypoint.claude.sh  log2529183559.csv  paper_summary.md  params2917335332.csv  params373162137.csv  test_game_headless.py  test_simulation_fixes.py
.claude/: ralph-loop.local.md  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
config/: game_params.yaml  generated_calibrated_game_params.yaml
data/plots/gazebo_runs/: full_game_trajectory_20260420_052916.csv  (+41 more)
docs/: ARCHITECTURE.md  paper_code_comparison.aux  paper_code_comparison.out  paper_code_comparison.tex  paper_code_comparison.toc  project_documentation.aux  project_documentation.out  project_documentation.tex  project_documentation.toc
docs/notes/: Prof_Guidance.md
docs/videos/: README.md  goal_guard_center_trajectory.csv  goal_guard_center_trajectory_summary.json  goal_guard_north_trajectory.csv  goal_guard_north_trajectory_summary.json  goal_guard_south_trajectory.csv  goal_guard_south_trajectory_summary.json
ralph-plans/: attacker-optimal-control-plan.md  attacker-optimal-control-promise.txt  attacker-optimal-control-working.md  attacker-optimal-control.md  fix-defender-vertical-sim-plan.md  fix-defender-vertical-sim-promise.txt  fix-defender-vertical-sim.md  fix-defender-wall-collision-working.md  fix-defender-wall-collision.md  reach-avoid-reimplementation-working.md
ralph-plans/fix-wall-collision/: execution-graph.md
reach_avoid_game/: pyproject.toml
reach_avoid_game/scripts/: calibrate_game.py  compute_horizontal.py  compute_vertical.py  generate_paper_figures.py  numerical_sim.py  visualize.py
reach_avoid_game/src/reach_avoid_game/: __init__.py  config.py
reach_avoid_game/src/reach_avoid_game/dynamics/: __init__.py  attacker.py  attacker_reaching.py  base.py  defender.py  horizontal_game.py  horizontal_relative.py  odp_utils.py  vertical_game.py  vertical_relative.py
reach_avoid_game/src/reach_avoid_game/odp/: __init__.py  grid.py  shapes.py  solver.py
reach_avoid_game/src/reach_avoid_game/solvers/: __init__.py  control_extraction.py  grid_utils.py  horizontal_solver.py  value_function_io.py  vertical_solver.py  winning_conditions.py
reach_avoid_game/src/reach_avoid_game/utils/: __init__.py  signed_distance.py
reach_avoid_game/src/reach_avoid_game/visualization/: __init__.py  trajectory_plots.py  value_function_plots.py
reach_avoid_game/tests/: test_behavior_policies.py  test_config.py  test_control_extraction.py  test_dynamics.py  test_horizontal_dynamics.py  test_horizontal_solver_sets.py  test_value_function_io.py  test_vertical_solver.py  test_winning_conditions.py
reach_avoid_ws/: takeoff.py
reach_avoid_ws/src/reach_avoid_bringup/: package.xml  setup.cfg  setup.py
reach_avoid_ws/src/reach_avoid_bringup/config/: gz_bridge.yaml  hardware_params.yaml  simulation_params.yaml
reach_avoid_ws/src/reach_avoid_bringup/launch/: attacker_only.launch.py  full_game.launch.py  hardware.launch.py  kinematic_game.launch.py  simulation.launch.py
reach_avoid_ws/src/reach_avoid_controller/: package.xml  setup.cfg  setup.py
reach_avoid_ws/src/reach_avoid_controller/reach_avoid_controller/: defender_node.py  value_function_loader.py
reach_avoid_ws/src/reach_avoid_controller/test/: test_defender_logic.py  test_value_function_loader.py
reach_avoid_ws/src/reach_avoid_sim/: package.xml  setup.cfg  setup.py
reach_avoid_ws/src/reach_avoid_sim/reach_avoid_sim/: ground_truth_relay_node.py  kinematic_sim_node.py  px4_adapter_node.py
reach_avoid_ws/src/reach_avoid_sim/test/: test_ground_truth_relay.py  test_px4_adapter.py
reach_avoid_ws/src/reach_avoid_sim/worlds/: reach_avoid_arena.sdf
scripts/: record_gazebo_scenarios.sh  record_ros_image_topic.py
tests/: sim_drone_tracker.py  test_simulation_fixes.py
tests/integration/: run_sitl_test.sh  test_kinematic_game.py  test_parsers.py  test_sitl_headless.py
(+31 files in other folders)
