# HJ solver: SFU-MARS OptimizedDP (odp) with HeteroCL
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reach-avoid-game"
version = "0.2.0"
description = "Reach-Avoid Differential Game with HJ Reachability Analysis (OptimizedDP)"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
