<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reach_avoid_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for reach-avoid games</description>
  <maintainer email="user@example.com">developer</maintainer>
  <license>MIT</license>
  <depend>reach_avoid_controller</depend>
  <depend>attacker_controller</depend>
  <depend>reach_avoid_sim</depend>
  <depend>reach_avoid_viz</depend>
  <!-- <depend>reach_avoid_hw</depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
